Update CommandTemplate